@@ -1541,6 +1541,9 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "STANDARD-CLASSOID" "CLASSOID-OF"
                "MAKE-STANDARD-CLASSOID" "CLASSOID-CELL-TYPEP"
                "FIND-CLASSOID-CELL" "EXTRACT-FUN-TYPE"
+               "N-RANDOM-CHUNK-BITS" "RANDOM-CHUNK"
+               "%INCLUSIVE-RANDOM-FIXNUM" "%INCLUSIVE-RANDOM-INTEGER"
+               "%INCLUSIVE-RANDOM-INTEGER-ACCEPT-REJECT" "%RANDOM-BITS"
                "%RANDOM-DOUBLE-FLOAT"
                #!+long-float "%RANDOM-LONG-FLOAT"
                "%RANDOM-SINGLE-FLOAT" "STATIC-CLASSOID"
@@ -1553,7 +1556,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "%SET-FUNCALLABLE-INSTANCE-LAYOUT"
                "BASIC-STRUCTURE-CLASSOID" "CLASSOID-CELL-CLASSOID"
                "REGISTER-LAYOUT"
-               "FUNCALLABLE-INSTANCE" "RANDOM-FIXNUM-MAX"
+               "FUNCALLABLE-INSTANCE"
                "MAKE-STATIC-CLASSOID" "INSTANCE-LAMBDA"
                "%MAKE-SYMBOL"
                "%FUNCALLABLE-INSTANCE-FUNCTION" "SYMBOL-HASH"
